--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,22 @@
   "bugs": {
     "url": "https://github.com/jckanthem/TicTacToeCLI/issues"
   },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
+  },
   "homepage": "https://github.com/jckanthem/TicTacToeCLI#readme",
   "dependencies": {
-    "chai": "^4.2.0"
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "chai": "^4.2.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "webpack": "^4.32.1",
+    "webpack-cli": "^3.3.2"
   }
 }
