included header file in main instead of .cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(TicTacToeCLI)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(TicTacToeCLI main.cpp)
+add_executable(TicTacToeCLI main.cpp Board.cpp)
